config/ad-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-core
spec:
  selector:
    app: ad-core
  type: ClusterIP
  clusterIP: None  # headless service
  ports:
  - name: http2-echo
    protocol: TCP
    port: 8070  # no targetPort for headless service
