config/envoy-taskmad-docker-dev.yaml
static_resources:
  listeners:
  - name: main_listener
    # tells envoy where to listen for incoming connections
    address: {socket_address: {address: 0.0.0.0, port_value: 5000}}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
            - name: envoy.file_access_log
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
                path: "/dev/stdout"
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: woz
              domains: ["taskmad-woz-dev.grill.science:8000"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: taskmad_woz
                  timeout: 0s
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, POST
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent
                max_age: "1728000"
            - name: chat
              domains: ["taskmad-chat-dev.grill.science:8000"]
              routes:
              - match: {prefix: "/"}
                route:
                  cluster: taskmad_chat
                  timeout: 0s
              cors:
                allow_origin_string_match:
                  - prefix: "*"
                allow_methods: GET, POST
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent
                max_age: "1728000"
          stream_idle_timeout: 3600s
          http_filters:
            - name: envoy.filters.http.grpc_web
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
            - name: envoy.filters.http.cors
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
            - name: envoy.filters.http.router
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: {filename: "/etc/envoy/cert.pem"}
              private_key: {filename: "/etc/envoy/privkey.pem"}
  clusters:
  - name: taskmad_chat
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 1s
    load_assignment:
      cluster_name: taskmad_chat
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8080
  - name: taskmad_woz
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 1s
    load_assignment:
      cluster_name: taskmad_woz
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8090
